--- a/src/index.css
+++ b/src/index.css
@@ -6,289 +6,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
-.App {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-}
-
-.Nav {
-  background: #454545;
-  color: #fff;
-  width: 225px;
-  display: flex;
-  flex-direction: column;
-  text-transform: capitalize;
-}
-
-.Nav + * {
-  display: flex;
-  flex: 1;
-}
-
-.User {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-}
-
-.UserImage {
-  border-radius: 50%;
-  margin-right: 10px;
-  height: 32px;
-}
-
-.text-button {
-  font: inherit;
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-  text-decoration: underline;
-  display: inline;
-  cursor: pointer;
-  font-size: 80%;
-  color: white;
-}
-
-.ChannelNav a {
+a {
   font-size: 90%;
   padding: 8px 20px;
   display: block;
   text-decoration: none;
   color: #fff;
+  opacity: 0.8;
+}
+a:hover {
+  opacity: 1;
 }
 
-.ChannelNav a.active {
-  background: hsl(30, 50%, 50%);
-}
-
-.Channel {
-  flex: 1;
-  display: flex;
-}
-
-.ChannelMain {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.ChannelInfo {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  font-weight: bold;
-  border-bottom: solid 1px #ccc;
-}
-
-.Topic {
-}
-
-.TopicInput {
+input {
   font: inherit;
-  border: 1px solid transparent;
-}
-
-.TopicInput:hover {
-  border-color: #ccc;
-}
-
-.Messages {
-  flex: 1;
-  padding: 10px 20px 10px 20px;
-  line-height: 1.3;
-  overflow: auto;
-}
-
-.Day {
-  display: flex;
-  align-items: center;
-}
-
-.DayLine {
-  flex: 1;
-  height: 1px;
-  background: #ccc;
-}
-
-.DayText {
-  font-weight: bold;
-  padding: 10px;
-  font-size: 80%;
-}
-
-.Message {
-  margin: 5px 0;
-  display: flex;
-}
-
-.Message.with-avatar {
-  display: flex;
-  margin-top: 10px;
-}
-
-.Avatar {
-  width: 30px;
-  height: 30px;
-  border-radius: 3px;
-  background-size: cover;
-  background-position: center center;
-  background-color: #fefefe;
-  background-image: url(https://placekitten.com/64/64);
-}
-
-.Author {
-  margin-left: 8px;
-  text-transform: capitalize;
-}
-
-.UserName {
-  font-weight: bold;
-  font-size: 90%;
-  text-transform: capitalize;
-}
-
-.TimeStamp {
-  color: #999;
-  font-size: 80%;
-}
-
-.MessageContent {
-}
-
-.Message.no-avatar {
-  margin-left: 38px;
-}
-
-.ChatInputBox {
-  padding: 0px 20px 20px 20px;
-}
-
-.ChatInput {
-  box-sizing: border-box;
-  font: inherit;
-  width: 100%;
-  padding: 8px;
-  border: solid 2px;
-  border-color: #aaa;
-  border-radius: 6px;
-  outline: none;
-}
-
-.ChatInput:focus {
-  border-color: #666;
-}
-
-.Members {
-  padding: 20px;
-  border-left: solid 1px #ccc;
-  width: 150px;
-}
-
-.Member {
-  display: flex;
-  align-items: center;
-  text-transform: capitalize;
-}
-
-.MemberStatus {
-  margin-right: 5px;
-  border-radius: 50%;
-  height: 0.66em;
-  width: 0.66em;
-}
-
-.MemberStatus.online {
-  background: hsl(110, 50%, 50%);
-}
-
-.MemberStatus.offline {
-  background: hsl(10, 0%, 70%);
-}
-
-.EndOfMessages {
-  text-align: center;
-  color: hsl(200, 50%, 50%);
-  padding: 5px;
-}
-
-.LoadMore {
-  text-align: center;
-}
-.Container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  background-color: #f8f8f8;
-}
-.Login {
-  margin: 200px auto;
-  width: 400px;
-  height: 300px;
-  text-align: center;
-  background-color: #fff;
-  filter: drop-shadow(1px 1px 1px#ccc);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border-radius: 4px;
-}
-.Login h1 {
-  color: #333;
-}
-.google-button {
-  height: 40px;
-  border-width: 0;
-  background: white;
-  color: #737373;
-  border-radius: 5px;
-  white-space: nowrap;
-  box-shadow: 1px 1px 0px 1px rgba(0, 0, 0, 0.05);
-  transition-property: background-color, box-shadow;
-  transition-duration: 150ms;
-  transition-timing-function: ease-in-out;
-  padding: 0;
-  cursor: pointer;
-}
-.google-button:focus,
-.google-button:hover {
-  box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.1);
-}
-
-.google-button:active {
-  background-color: #e5e5e5;
-  box-shadow: none;
-  transition-duration: 10ms;
-}
-.google-button__icon {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 8px 0 8px 8px;
-  width: 18px;
-  height: 18px;
-  box-sizing: border-box;
-}
-
-.google-button__icon--plus {
-  width: 27px;
-}
-
-.google-button__text {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 0 24px;
-  font-size: 14px;
-  font-weight: bold;
-  font-family: 'Roboto', arial, sans-serif;
 }
